# ternary-tnn

./: AGENT.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  INSIGHT_GPU.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: lib.rs
